[package]
name = "gamble_game_near"
version = "1.0.0"
authors = ["young<yanghangzq@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]


[dependencies]
uint = {version = "0.9.0", default-features = false}
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true